add initial qt graphical interface

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,13 +1,15 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0
-
-COPY . /app
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 
 WORKDIR /app
 
+COPY . .
+
 RUN dotnet restore
+RUN dotnet publish -c Release -o /publish
 
-RUN dotnet build
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
+WORKDIR /app
 
-EXPOSE 80
+COPY --from=build-env /publish .
 
-CMD ["dotnet", "run"]
+ENTRYPOINT ["dotnet", "UniversityBRDataAPI.dll"]
