--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db.pcjtjkkuibptaclfipms.supabase.co;Port=5432;Username=postgres;Password=xHDx0tY9EEwShoNm;Database=postgres;"
+  },
+  "AllowedHosts": "*"
 }
