--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db.pcjtjkkuibptaclfipms.supabase.co;Port=5432;Username=postgres;Password=xHDx0tY9EEwShoNm;Database=postgres;"
+  },
   "AllowedHosts": "*"
 }
