add signals and slot functions to qt app

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -57,6 +57,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\apiReader.cpp" />
+    <ClCompile Include="Src\apiReader.hpp" />
     <QtRcc Include="client.qrc" />
     <QtUic Include="client.ui" />
     <ClCompile Include="Src\client.cpp" />
